2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build install] Installed punified Scheme, sans ".scm" extension.

	* autogen.sh: Import Guile-BAUX module ‘punify’.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[uninstall] Fix bug: Make sure everything is properly deleted.

	* autogen.sh: Import uninstall-sofixed.
	* Makefile.am (EXTRA_DIST): Add build-aux/uninstall-sofixed.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Use U+2018, U+2019 in example.

	* doc/guile-pg.texi: Add ‘coding’ cookie for Emacs;
	declare document encoding to be ‘UTF-8’.
	* ref.texh: Add ‘coding’ local variable at eof.
	(Easy Interaction): Use U+2018, U+2019 in example.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build maint] Don't bundle modsup.h; copy 3 macros from it, instead.

	* autogen.sh: Don't maintain modsup.h, modsup.h.snap.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build inst] Add support for "no C module" mode.

	* autogen.sh: Import Guile-BAUX module ‘gen-scheme-wrapper’.
	* configure.ac (cmod): New AC_ARG_ENABLE.
	(mkmodcat): Delete GUILE_TOOLS_PROG.
	(pg_cv_mkmodcat): New AC_CACHE_CHECK.
	(USE_CMOD): New AM_CONDITIONAL.
	(USE_CMOD): New AC_DEFINE.

2011-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Do a partial install under test/; point ‘%load-path’ there.

	* Makefile.am (noinst_DATA): Delete var.
	(.module-catalog): Delete target.
	(CLEANFILES): Delete var.
	* configure.ac (mkpimmc): Delete GUILE_TOOLS_PROG.
	(GUILE_MODULE_CATALOG_PREP): Delete macro call.

2011-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[inst int] Move $(mkmodcat) invocation from top dir to src/.

	* Makefile.am (install-data-hook): Delete target.

2011-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Fix bug: Distribute build-aux/guile-baux/*, too!

	Omission from 2011-05-03, "Import
	Guile-BAUX modules for doc snarfing".

	* Makefile.am (EXTRA_DIST): Add build-aux/guile-baux.

2011-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
