@@ -1,5 +1,12 @@
 2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[maint] Instantiate test/show-platform at configure-time.
+
+	* show-platform.in: New file.
+	* show-platforM: Delete file.
+
+2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[v] Make partial install depend on ../src "make all".
 
 	Omission from 2011-05-14, "Do a partial
