@@ -1,5 +1,12 @@
 2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[maint] Instantiate test/show-platform at configure-time.
+
+	* configure.ac (test/show-platform): New AC_GUILE_PG_CONFIG_SCRIPT.
+	* Makefile.am (dist-hook): Delete target.
+
+2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build install] Installed punified Scheme, sans ".scm" extension.
 
 	* autogen.sh: Import Guile-BAUX module ‘punify’.
